src/test/ui/simd/shuffle-not-out-of-bounds.stderr
error[E0511]: invalid monomorphization of `simd_shuffle2` intrinsic: shuffle index #0 is out of bounds (limit 4)
  --> $DIR/shuffle-not-out-of-bounds.rs:163:21
   |
LL |                     $y(vec1, vec2, ARR)
   |                     ^^^^^^^^^^^^^^^^^^^
...
LL |     test_shuffle_lanes!(2, u8x2, simd_shuffle2, (2, 1));
   |     ---------------------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `test_shuffle_lanes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0511]: invalid monomorphization of `simd_shuffle4` intrinsic: shuffle index #0 is out of bounds (limit 8)
  --> $DIR/shuffle-not-out-of-bounds.rs:163:21
   |
LL |                     $y(vec1, vec2, ARR)
   |                     ^^^^^^^^^^^^^^^^^^^
...
LL |     test_shuffle_lanes!(4, u8x4, simd_shuffle4, (4, 3, 2, 1));
   |     ---------------------------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `test_shuffle_lanes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0511]: invalid monomorphization of `simd_shuffle8` intrinsic: shuffle index #0 is out of bounds (limit 16)
  --> $DIR/shuffle-not-out-of-bounds.rs:163:21
   |
LL |                     $y(vec1, vec2, ARR)
   |                     ^^^^^^^^^^^^^^^^^^^
...
LL |     test_shuffle_lanes!(8, u8x8, simd_shuffle8, (8, 7, 6, 5, 4, 3, 2, 1));
   |     ---------------------------------------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `test_shuffle_lanes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0511]: invalid monomorphization of `simd_shuffle16` intrinsic: shuffle index #0 is out of bounds (limit 32)
  --> $DIR/shuffle-not-out-of-bounds.rs:163:21
   |
LL |                       $y(vec1, vec2, ARR)
   |                       ^^^^^^^^^^^^^^^^^^^
...
LL | /     test_shuffle_lanes!(16, u8x16, simd_shuffle16,
LL | |         (16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1));
   | |_________________________________________________________________- in this macro invocation
   |
   = note: this error originates in the macro `test_shuffle_lanes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0511]: invalid monomorphization of `simd_shuffle32` intrinsic: shuffle index #0 is out of bounds (limit 64)
  --> $DIR/shuffle-not-out-of-bounds.rs:163:21
   |
LL |                       $y(vec1, vec2, ARR)
   |                       ^^^^^^^^^^^^^^^^^^^
...
LL | /     test_shuffle_lanes!(32, u8x32, simd_shuffle32,
LL | |         (32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16,
LL | |          15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1));
   | |_____________________________________________________________- in this macro invocation
   |
   = note: this error originates in the macro `test_shuffle_lanes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0511]: invalid monomorphization of `simd_shuffle64` intrinsic: shuffle index #0 is out of bounds (limit 128)
  --> $DIR/shuffle-not-out-of-bounds.rs:163:21
   |
LL |                       $y(vec1, vec2, ARR)
   |                       ^^^^^^^^^^^^^^^^^^^
...
LL | /     test_shuffle_lanes!(64, u8x64, simd_shuffle64,
LL | |         (64, 63, 62, 61, 60, 59, 58, 57, 56, 55, 54, 53, 52, 51, 50, 49,
LL | |          48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33,
LL | |          32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17,
LL | |          16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1));
   | |_________________________________________________________________- in this macro invocation
   |
   = note: this error originates in the macro `test_shuffle_lanes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0511]: invalid monomorphization of `simd_shuffle` intrinsic: shuffle index #0 is out of bounds (limit 4)
  --> $DIR/shuffle-not-out-of-bounds.rs:198:23
   |
LL |         let _: u8x2 = simd_shuffle(v, v, I);
   |                       ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0511`.
